improve dagger effect + spell descriptions + css fix for tooltips.

--- a/prototype/website/src/game-app/ui/player-status.html
+++ b/prototype/website/src/game-app/ui/player-status.html
@@ -251,7 +251,7 @@
             </div>
 
             <div class="health-bar" id="health-bar">
-                <paper-tooltip class="spell-info" animation-delay="0" position="bottom">
+                <paper-tooltip class="" animation-delay="0" position="bottom">
                     <span>[[_integer(target.stats.health)]] / [[_integer(target.stats.maxhealth)]]</span>
                 </paper-tooltip>
                 <paper-progress class="transiting" min="0" max="[[target.stats.maxhealth]]"
@@ -259,7 +259,7 @@
             </div>
 
             <div class="energy-bar">
-                <paper-tooltip class="spell-info" animation-delay="0" position="bottom">
+                <paper-tooltip class="" animation-delay="0" position="bottom">
                     <span>[[_integer(target.stats.energy)]] / [[_integer(target.stats.maxenergy)]]</span>
                 </paper-tooltip>
                 <paper-progress class="transiting" min="0" max="[[target.stats.maxenergy]]"
@@ -267,7 +267,7 @@
             </div>
 
             <div class="exp-bar">
-                <paper-tooltip class="spell-info" animation-delay="0" position="bottom">
+                <paper-tooltip class="" animation-delay="0" position="bottom">
                     <span>[[_integer(target.stats.experience)]] / [[_integer(target.stats.nextlevel)]]</span>
                 </paper-tooltip>
                 <paper-progress class="transiting" min="0" max="[[target.stats.nextlevel]]"
