removed unnecessary css comments.

--- a/prototype/website/src/game-app/ui/friend-view.html
+++ b/prototype/website/src/game-app/ui/friend-view.html
@@ -29,11 +29,10 @@
             }
 
             ::-webkit-scrollbar {
-                width: 6px; /* Remove scrollbar space */
-                background: transparent; /* Optional: just make scrollbar invisible */
+                width: 6px;
+                background: transparent;
             }
 
-            /* Optional: show position indicator in red */
             ::-webkit-scrollbar-thumb {
                 background: var(--accent-color);
                 opacity: 0.76;
